cabal-version:       3.0

name:                genpass
version:             0.1.0.1
synopsis:            Command Line Tool to Generate/Check Passwords with Some Rules
description:         Command Line Tool to Generate/Check Passwords with Some Rules
homepage:            https://github.com/syocy/genpass
bug-reports:         https://github.com/syocy/genpass/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              OSANAI Kazuyoshi
maintainer:          osmium.k@gmail.com
copyright:           2020 OSANAI Kazuyoshi
category:            Password
build-type:          Simple

extra-source-files:  CHANGELOG.md
                   , README.md

library
  exposed-modules:     GenPass
                     , GenPass.Cp
                     , GenPass.Range
                     , GenPass.Runner
                     , GenPass.Setting
                     , Paths_genpass
  other-modules:       Paths_pkgname
  autogen-modules:     Paths_genpass
  hs-source-dirs:      src
  build-depends:       base >=4.13 && <4.14
                     , barbies >=2.0
                     , generic-deriving
                     , cryptonite >=0.26
                     , memory
                     , bytestring
                     , text
                     , optics >=0.2
                     , megaparsec >=8.0
                     , string-interpolate
                     , range
                     , deepseq
                     , ghc-compact
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat -O -fomit-interface-pragmas -eventlog

executable genpass
  main-is:             Main.hs
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14
                     , genpass
                     , text
                     , optics >=0.2
                     , string-interpolate
                     , ghc-compact
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat -O -fomit-interface-pragmas -eventlog -rtsopts
